# GAMES101_Homeworks

./: .gitignore  README.md
Homework1/: .gitignore
Homework1/Assignment1/: CMakeLists.txt  main.cpp
Homework2/src/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp
Homework3/: .gitignore
Homework3/Assignment3/: CMakeLists.txt  main.cpp  rasterizer.cpp
Homework4/: .gitignore
Homework4/Assignment4/: main.cpp
Homework5/: .gitignore
Homework5/Assignment5/: Renderer.cpp  Triangle.hpp
Homework6/: .gitignore
Homework6/Assignment6/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Triangle.hpp
Homework7/: .gitignore
Homework7/Assignment7/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Material.hpp  README.md  Renderer.cpp  Scene.cpp  Sphere.hpp  Triangle.hpp  Vector.hpp  main.cpp
Homework8/: .gitignore
Homework8/Assignment8/src/: application.cpp  rope.cpp
